# MicrosoftLearnMCP

./: .gitignore  README.md  pyproject.toml
microsoft_learn_mcp_server/: __init__.py  client.py  formatters.py  models.py  server.py
tests/: test_formatters.py  test_models.py
